SEO: ingredients directory CTA links to public home (not gated /browser)

--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -30,7 +30,7 @@
     </ul>
 
     <p style="margin-top:18px;">
-      <a href="/browser">Open PureFyul Analyzer</a>
+      <a href="/">Open PureFyul Analyzer</a>
     </p>
   </div>
 </body>
