--- a/templates/goals.html
+++ b/templates/goals.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   {% include "_seo_head.html" %}
   {# BreadcrumbList JSON-LD (helps SEO) #}
-  <script type="application/ld+json" nonce="{{ csp_nonce() }}">
+  <script type="application/ld+json" nonce="{{ csp_nonce }}">
 {{ {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
