Track contact submit as GA4 generate_lead on success

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -260,6 +260,14 @@
           </div>
         {% endif %}
       {% endwith %}
+
+{% if request.args.get('sent') == '1' %}
+<script nonce="{{ csp_nonce }}">
+  if (typeof gtag === 'function') {
+    gtag('event', 'generate_lead', { method: 'contact_form' });
+  }
+</script>
+{% endif %}
       
       <!-- Contact Form -->
       <form method="POST" action="{{ url_for('contact') }}">
